--- a/Source/GDApi/gdapi/build.gradle
+++ b/Source/GDApi/gdapi/build.gradle
@@ -36,9 +36,12 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.google.android.gms:play-services-ads:11.0.4'
+    compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.android.support:support-v4:25.4.0'
+    compile 'com.google.android.gms:play-services-ads:11.8.0'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.code.gson:gson:2.8.2'
+
 }
 
 task removeJar(type: Delete){
